# moricup-slack-bot

./: LICENSE  README.md  pyproject.toml
src/: app.py
