[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["moricup <morisho.0123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
slack-bolt = "^1.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
